// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HandRangeUtils.parse() parses "" into a hand range 1`] = `Map {}`;

exports[`HandRangeUtils.parse() parses "7d6h" into a hand range 1`] = `
Map {
  4295229440 => 1,
}
`;

exports[`HandRangeUtils.parse() parses "7d6h:0.67" into a hand range 1`] = `
Map {
  4295229440 => 0.67,
}
`;

exports[`HandRangeUtils.parse() parses "44" into a hand range 1`] = `
Map {
  65544 => 1,
  536870920 => 1,
  4398046511112 => 1,
  536936448 => 1,
  4398046576640 => 1,
  4398583382016 => 1,
}
`;

exports[`HandRangeUtils.parse() parses "44:0.44" into a hand range 1`] = `
Map {
  65544 => 0.44,
  536870920 => 0.44,
  4398046511112 => 0.44,
  536936448 => 0.44,
  4398046576640 => 0.44,
  4398583382016 => 0.44,
}
`;

exports[`HandRangeUtils.parse() parses "72o" into a hand range 1`] = `
Map {
  16448 => 1,
  134217792 => 1,
  1099511627840 => 1,
  524290 => 1,
  134742016 => 1,
  1099512152064 => 1,
  4294967298 => 1,
  4294983680 => 1,
  1103806595072 => 1,
  35184372088834 => 1,
  35184372105216 => 1,
  35184506306560 => 1,
}
`;

exports[`HandRangeUtils.parse() parses "72o:0.27" into a hand range 1`] = `
Map {
  16448 => 0.27,
  134217792 => 0.27,
  1099511627840 => 0.27,
  524290 => 0.27,
  134742016 => 0.27,
  1099512152064 => 0.27,
  4294967298 => 0.27,
  4294983680 => 0.27,
  1103806595072 => 0.27,
  35184372088834 => 0.27,
  35184372105216 => 0.27,
  35184506306560 => 0.27,
}
`;

exports[`HandRangeUtils.parse() parses "88-66" into a hand range 1`] = `
Map {
  1048704 => 1,
  8589934720 => 1,
  70368744177792 => 1,
  8590983168 => 1,
  70368745226240 => 1,
  70377334112256 => 1,
  524352 => 1,
  4294967360 => 1,
  35184372088896 => 1,
  4295491584 => 1,
  35184372613120 => 1,
  35188667056128 => 1,
  262176 => 1,
  2147483680 => 1,
  17592186044448 => 1,
  2147745792 => 1,
  17592186306560 => 1,
  17594333528064 => 1,
}
`;

exports[`HandRangeUtils.parse() parses "88-66,JJ+,44,AQs-A9s,98o-96o,K8s+,ATo+,44,JTs,72o,AsKs,7d6h" into a hand range 1`] = `
Map {
  1048704 => 1,
  8589934720 => 1,
  70368744177792 => 1,
  8590983168 => 1,
  70368745226240 => 1,
  70377334112256 => 1,
  524352 => 1,
  4294967360 => 1,
  35184372088896 => 1,
  4295491584 => 1,
  35184372613120 => 1,
  35188667056128 => 1,
  262176 => 1,
  2147483680 => 1,
  17592186044448 => 1,
  2147745792 => 1,
  17592186306560 => 1,
  17594333528064 => 1,
  8193 => 1,
  67108865 => 1,
  549755813889 => 1,
  67117056 => 1,
  549755822080 => 1,
  549822922752 => 1,
  33558528 => 1,
  274877911040 => 1,
  2251799813689344 => 1,
  274911461376 => 1,
  2251799847239680 => 1,
  2252074691592192 => 1,
  16779264 => 1,
  137438955520 => 1,
  1125899906844672 => 1,
  137455730688 => 1,
  1125899923619840 => 1,
  1126037345796096 => 1,
  8389632 => 1,
  68719477760 => 1,
  562949953422336 => 1,
  68727865344 => 1,
  562949961809920 => 1,
  563018672898048 => 1,
  65544 => 1,
  536870920 => 1,
  4398046511112 => 1,
  536936448 => 1,
  4398046576640 => 1,
  4398583382016 => 1,
  2049 => 1,
  16785408 => 1,
  137506062336 => 1,
  1126449662656512 => 1,
  1025 => 1,
  8396800 => 1,
  68786585600 => 1,
  563499709235200 => 1,
  513 => 1,
  4202496 => 1,
  34426847232 => 1,
  282024732524544 => 1,
  257 => 1,
  2105344 => 1,
  17246978048 => 1,
  141287244169216 => 1,
  1048832 => 1,
  8589934848 => 1,
  70368744177920 => 1,
  2097280 => 1,
  8592031744 => 1,
  70368746274816 => 1,
  17179869312 => 1,
  17180917760 => 1,
  70385924046848 => 1,
  140737488355456 => 1,
  140737489403904 => 1,
  140746078289920 => 1,
  524544 => 1,
  4294967552 => 1,
  35184372089088 => 1,
  2097216 => 1,
  4297064448 => 1,
  35184374185984 => 1,
  17179869248 => 1,
  17180393472 => 1,
  35201551958016 => 1,
  140737488355392 => 1,
  140737488879616 => 1,
  140741783322624 => 1,
  262400 => 1,
  2147483904 => 1,
  17592186044672 => 1,
  2097184 => 1,
  2149580800 => 1,
  17592188141568 => 1,
  17179869216 => 1,
  17180131328 => 1,
  17609365913600 => 1,
  140737488355360 => 1,
  140737488617472 => 1,
  140739635838976 => 1,
  6144 => 1,
  50331648 => 1,
  412316860416 => 1,
  3377699720527872 => 1,
  5120 => 1,
  41943040 => 1,
  343597383680 => 1,
  2814749767106560 => 1,
  4608 => 1,
  37748736 => 1,
  309237645312 => 1,
  2533274790395904 => 1,
  4352 => 1,
  35651584 => 1,
  292057776128 => 1,
  2392537302040576 => 1,
  4224 => 1,
  34603008 => 1,
  283467841536 => 1,
  2322168557862912 => 1,
  33554433 => 1,
  274877906945 => 1,
  2251799813685249 => 1,
  12288 => 1,
  274877915136 => 1,
  2251799813693440 => 1,
  67112960 => 1,
  100663296 => 1,
  2251799880794112 => 1,
  549755817984 => 1,
  549789368320 => 1,
  824633720832 => 1,
  16777217 => 1,
  137438953473 => 1,
  1125899906842625 => 1,
  10240 => 1,
  137438961664 => 1,
  1125899906850816 => 1,
  67110912 => 1,
  83886080 => 1,
  1125899973951488 => 1,
  549755815936 => 1,
  549772591104 => 1,
  687194767360 => 1,
  8388609 => 1,
  68719476737 => 1,
  562949953421313 => 1,
  9216 => 1,
  68719484928 => 1,
  562949953429504 => 1,
  67109888 => 1,
  75497472 => 1,
  562950020530176 => 1,
  549755814912 => 1,
  549764202496 => 1,
  618475290624 => 1,
  4194305 => 1,
  34359738369 => 1,
  281474976710657 => 1,
  8704 => 1,
  34359746560 => 1,
  281474976718848 => 1,
  67109376 => 1,
  71303168 => 1,
  281475043819520 => 1,
  549755814400 => 1,
  549760008192 => 1,
  584115552256 => 1,
  1536 => 1,
  12582912 => 1,
  103079215104 => 1,
  844424930131968 => 1,
  16448 => 1,
  134217792 => 1,
  1099511627840 => 1,
  524290 => 1,
  134742016 => 1,
  1099512152064 => 1,
  4294967298 => 1,
  4294983680 => 1,
  1103806595072 => 1,
  35184372088834 => 1,
  35184372105216 => 1,
  35184506306560 => 1,
  4097 => 1,
  4295229440 => 1,
}
`;

exports[`HandRangeUtils.parse() parses "88-66:0.66" into a hand range 1`] = `
Map {
  1048704 => 0.66,
  8589934720 => 0.66,
  70368744177792 => 0.66,
  8590983168 => 0.66,
  70368745226240 => 0.66,
  70377334112256 => 0.66,
  524352 => 0.66,
  4294967360 => 0.66,
  35184372088896 => 0.66,
  4295491584 => 0.66,
  35184372613120 => 0.66,
  35188667056128 => 0.66,
  262176 => 0.66,
  2147483680 => 0.66,
  17592186044448 => 0.66,
  2147745792 => 0.66,
  17592186306560 => 0.66,
  17594333528064 => 0.66,
}
`;

exports[`HandRangeUtils.parse() parses "88-66:0.66,JJ+:0.5,44,AQs-A9s:0.2,98o-96o:0.999,K8s+:0.80,ATo+:1,44:0.44,JTs:0.25,72o:0.27,AsKs:0.4,7d6h:0.67" into a hand range 1`] = `
Map {
  1048704 => 0.66,
  8589934720 => 0.66,
  70368744177792 => 0.66,
  8590983168 => 0.66,
  70368745226240 => 0.66,
  70377334112256 => 0.66,
  524352 => 0.66,
  4294967360 => 0.66,
  35184372088896 => 0.66,
  4295491584 => 0.66,
  35184372613120 => 0.66,
  35188667056128 => 0.66,
  262176 => 0.66,
  2147483680 => 0.66,
  17592186044448 => 0.66,
  2147745792 => 0.66,
  17592186306560 => 0.66,
  17594333528064 => 0.66,
  8193 => 0.5,
  67108865 => 0.5,
  549755813889 => 0.5,
  67117056 => 0.5,
  549755822080 => 0.5,
  549822922752 => 0.5,
  33558528 => 0.5,
  274877911040 => 0.5,
  2251799813689344 => 0.5,
  274911461376 => 0.5,
  2251799847239680 => 0.5,
  2252074691592192 => 0.5,
  16779264 => 0.5,
  137438955520 => 0.5,
  1125899906844672 => 0.5,
  137455730688 => 0.5,
  1125899923619840 => 0.5,
  1126037345796096 => 0.5,
  8389632 => 0.5,
  68719477760 => 0.5,
  562949953422336 => 0.5,
  68727865344 => 0.5,
  562949961809920 => 0.5,
  563018672898048 => 0.5,
  65544 => 0.44,
  536870920 => 0.44,
  4398046511112 => 0.44,
  536936448 => 0.44,
  4398046576640 => 0.44,
  4398583382016 => 0.44,
  2049 => 0.2,
  16785408 => 0.2,
  137506062336 => 0.2,
  1126449662656512 => 0.2,
  1025 => 0.2,
  8396800 => 0.2,
  68786585600 => 0.2,
  563499709235200 => 0.2,
  513 => 0.2,
  4202496 => 0.2,
  34426847232 => 0.2,
  282024732524544 => 0.2,
  257 => 0.2,
  2105344 => 0.2,
  17246978048 => 0.2,
  141287244169216 => 0.2,
  1048832 => 0.999,
  8589934848 => 0.999,
  70368744177920 => 0.999,
  2097280 => 0.999,
  8592031744 => 0.999,
  70368746274816 => 0.999,
  17179869312 => 0.999,
  17180917760 => 0.999,
  70385924046848 => 0.999,
  140737488355456 => 0.999,
  140737489403904 => 0.999,
  140746078289920 => 0.999,
  524544 => 0.999,
  4294967552 => 0.999,
  35184372089088 => 0.999,
  2097216 => 0.999,
  4297064448 => 0.999,
  35184374185984 => 0.999,
  17179869248 => 0.999,
  17180393472 => 0.999,
  35201551958016 => 0.999,
  140737488355392 => 0.999,
  140737488879616 => 0.999,
  140741783322624 => 0.999,
  262400 => 0.999,
  2147483904 => 0.999,
  17592186044672 => 0.999,
  2097184 => 0.999,
  2149580800 => 0.999,
  17592188141568 => 0.999,
  17179869216 => 0.999,
  17180131328 => 0.999,
  17609365913600 => 0.999,
  140737488355360 => 0.999,
  140737488617472 => 0.999,
  140739635838976 => 0.999,
  6144 => 0.8,
  50331648 => 0.8,
  412316860416 => 0.8,
  3377699720527872 => 0.8,
  5120 => 0.8,
  41943040 => 0.8,
  343597383680 => 0.8,
  2814749767106560 => 0.8,
  4608 => 0.8,
  37748736 => 0.8,
  309237645312 => 0.8,
  2533274790395904 => 0.8,
  4352 => 0.8,
  35651584 => 0.8,
  292057776128 => 0.8,
  2392537302040576 => 0.8,
  4224 => 0.8,
  34603008 => 0.8,
  283467841536 => 0.8,
  2322168557862912 => 0.8,
  33554433 => 1,
  274877906945 => 1,
  2251799813685249 => 1,
  12288 => 1,
  274877915136 => 1,
  2251799813693440 => 1,
  67112960 => 1,
  100663296 => 1,
  2251799880794112 => 1,
  549755817984 => 1,
  549789368320 => 1,
  824633720832 => 1,
  16777217 => 1,
  137438953473 => 1,
  1125899906842625 => 1,
  10240 => 1,
  137438961664 => 1,
  1125899906850816 => 1,
  67110912 => 1,
  83886080 => 1,
  1125899973951488 => 1,
  549755815936 => 1,
  549772591104 => 1,
  687194767360 => 1,
  8388609 => 1,
  68719476737 => 1,
  562949953421313 => 1,
  9216 => 1,
  68719484928 => 1,
  562949953429504 => 1,
  67109888 => 1,
  75497472 => 1,
  562950020530176 => 1,
  549755814912 => 1,
  549764202496 => 1,
  618475290624 => 1,
  4194305 => 1,
  34359738369 => 1,
  281474976710657 => 1,
  8704 => 1,
  34359746560 => 1,
  281474976718848 => 1,
  67109376 => 1,
  71303168 => 1,
  281475043819520 => 1,
  549755814400 => 1,
  549760008192 => 1,
  584115552256 => 1,
  1536 => 0.25,
  12582912 => 0.25,
  103079215104 => 0.25,
  844424930131968 => 0.25,
  16448 => 0.27,
  134217792 => 0.27,
  1099511627840 => 0.27,
  524290 => 0.27,
  134742016 => 0.27,
  1099512152064 => 0.27,
  4294967298 => 0.27,
  4294983680 => 0.27,
  1103806595072 => 0.27,
  35184372088834 => 0.27,
  35184372105216 => 0.27,
  35184506306560 => 0.27,
  4097 => 0.4,
  4295229440 => 0.67,
}
`;

exports[`HandRangeUtils.parse() parses "98o-96o" into a hand range 1`] = `
Map {
  1048832 => 1,
  8589934848 => 1,
  70368744177920 => 1,
  2097280 => 1,
  8592031744 => 1,
  70368746274816 => 1,
  17179869312 => 1,
  17180917760 => 1,
  70385924046848 => 1,
  140737488355456 => 1,
  140737489403904 => 1,
  140746078289920 => 1,
  524544 => 1,
  4294967552 => 1,
  35184372089088 => 1,
  2097216 => 1,
  4297064448 => 1,
  35184374185984 => 1,
  17179869248 => 1,
  17180393472 => 1,
  35201551958016 => 1,
  140737488355392 => 1,
  140737488879616 => 1,
  140741783322624 => 1,
  262400 => 1,
  2147483904 => 1,
  17592186044672 => 1,
  2097184 => 1,
  2149580800 => 1,
  17592188141568 => 1,
  17179869216 => 1,
  17180131328 => 1,
  17609365913600 => 1,
  140737488355360 => 1,
  140737488617472 => 1,
  140739635838976 => 1,
}
`;

exports[`HandRangeUtils.parse() parses "98o-96o:0.999" into a hand range 1`] = `
Map {
  1048832 => 0.999,
  8589934848 => 0.999,
  70368744177920 => 0.999,
  2097280 => 0.999,
  8592031744 => 0.999,
  70368746274816 => 0.999,
  17179869312 => 0.999,
  17180917760 => 0.999,
  70385924046848 => 0.999,
  140737488355456 => 0.999,
  140737489403904 => 0.999,
  140746078289920 => 0.999,
  524544 => 0.999,
  4294967552 => 0.999,
  35184372089088 => 0.999,
  2097216 => 0.999,
  4297064448 => 0.999,
  35184374185984 => 0.999,
  17179869248 => 0.999,
  17180393472 => 0.999,
  35201551958016 => 0.999,
  140737488355392 => 0.999,
  140737488879616 => 0.999,
  140741783322624 => 0.999,
  262400 => 0.999,
  2147483904 => 0.999,
  17592186044672 => 0.999,
  2097184 => 0.999,
  2149580800 => 0.999,
  17592188141568 => 0.999,
  17179869216 => 0.999,
  17180131328 => 0.999,
  17609365913600 => 0.999,
  140737488355360 => 0.999,
  140737488617472 => 0.999,
  140739635838976 => 0.999,
}
`;

exports[`HandRangeUtils.parse() parses "AQs-A9s" into a hand range 1`] = `
Map {
  2049 => 1,
  16785408 => 1,
  137506062336 => 1,
  1126449662656512 => 1,
  1025 => 1,
  8396800 => 1,
  68786585600 => 1,
  563499709235200 => 1,
  513 => 1,
  4202496 => 1,
  34426847232 => 1,
  282024732524544 => 1,
  257 => 1,
  2105344 => 1,
  17246978048 => 1,
  141287244169216 => 1,
}
`;

exports[`HandRangeUtils.parse() parses "AQs-A9s:0.2" into a hand range 1`] = `
Map {
  2049 => 0.2,
  16785408 => 0.2,
  137506062336 => 0.2,
  1126449662656512 => 0.2,
  1025 => 0.2,
  8396800 => 0.2,
  68786585600 => 0.2,
  563499709235200 => 0.2,
  513 => 0.2,
  4202496 => 0.2,
  34426847232 => 0.2,
  282024732524544 => 0.2,
  257 => 0.2,
  2105344 => 0.2,
  17246978048 => 0.2,
  141287244169216 => 0.2,
}
`;

exports[`HandRangeUtils.parse() parses "ATo+" into a hand range 1`] = `
Map {
  33554433 => 1,
  274877906945 => 1,
  2251799813685249 => 1,
  12288 => 1,
  274877915136 => 1,
  2251799813693440 => 1,
  67112960 => 1,
  100663296 => 1,
  2251799880794112 => 1,
  549755817984 => 1,
  549789368320 => 1,
  824633720832 => 1,
  16777217 => 1,
  137438953473 => 1,
  1125899906842625 => 1,
  10240 => 1,
  137438961664 => 1,
  1125899906850816 => 1,
  67110912 => 1,
  83886080 => 1,
  1125899973951488 => 1,
  549755815936 => 1,
  549772591104 => 1,
  687194767360 => 1,
  8388609 => 1,
  68719476737 => 1,
  562949953421313 => 1,
  9216 => 1,
  68719484928 => 1,
  562949953429504 => 1,
  67109888 => 1,
  75497472 => 1,
  562950020530176 => 1,
  549755814912 => 1,
  549764202496 => 1,
  618475290624 => 1,
  4194305 => 1,
  34359738369 => 1,
  281474976710657 => 1,
  8704 => 1,
  34359746560 => 1,
  281474976718848 => 1,
  67109376 => 1,
  71303168 => 1,
  281475043819520 => 1,
  549755814400 => 1,
  549760008192 => 1,
  584115552256 => 1,
}
`;

exports[`HandRangeUtils.parse() parses "ATo+:1" into a hand range 1`] = `
Map {
  33554433 => 1,
  274877906945 => 1,
  2251799813685249 => 1,
  12288 => 1,
  274877915136 => 1,
  2251799813693440 => 1,
  67112960 => 1,
  100663296 => 1,
  2251799880794112 => 1,
  549755817984 => 1,
  549789368320 => 1,
  824633720832 => 1,
  16777217 => 1,
  137438953473 => 1,
  1125899906842625 => 1,
  10240 => 1,
  137438961664 => 1,
  1125899906850816 => 1,
  67110912 => 1,
  83886080 => 1,
  1125899973951488 => 1,
  549755815936 => 1,
  549772591104 => 1,
  687194767360 => 1,
  8388609 => 1,
  68719476737 => 1,
  562949953421313 => 1,
  9216 => 1,
  68719484928 => 1,
  562949953429504 => 1,
  67109888 => 1,
  75497472 => 1,
  562950020530176 => 1,
  549755814912 => 1,
  549764202496 => 1,
  618475290624 => 1,
  4194305 => 1,
  34359738369 => 1,
  281474976710657 => 1,
  8704 => 1,
  34359746560 => 1,
  281474976718848 => 1,
  67109376 => 1,
  71303168 => 1,
  281475043819520 => 1,
  549755814400 => 1,
  549760008192 => 1,
  584115552256 => 1,
}
`;

exports[`HandRangeUtils.parse() parses "AsKs" into a hand range 1`] = `
Map {
  4097 => 1,
}
`;

exports[`HandRangeUtils.parse() parses "AsKs:0.4" into a hand range 1`] = `
Map {
  4097 => 0.4,
}
`;

exports[`HandRangeUtils.parse() parses "JJ+" into a hand range 1`] = `
Map {
  8193 => 1,
  67108865 => 1,
  549755813889 => 1,
  67117056 => 1,
  549755822080 => 1,
  549822922752 => 1,
  33558528 => 1,
  274877911040 => 1,
  2251799813689344 => 1,
  274911461376 => 1,
  2251799847239680 => 1,
  2252074691592192 => 1,
  16779264 => 1,
  137438955520 => 1,
  1125899906844672 => 1,
  137455730688 => 1,
  1125899923619840 => 1,
  1126037345796096 => 1,
  8389632 => 1,
  68719477760 => 1,
  562949953422336 => 1,
  68727865344 => 1,
  562949961809920 => 1,
  563018672898048 => 1,
}
`;

exports[`HandRangeUtils.parse() parses "JJ+:0.5" into a hand range 1`] = `
Map {
  8193 => 0.5,
  67108865 => 0.5,
  549755813889 => 0.5,
  67117056 => 0.5,
  549755822080 => 0.5,
  549822922752 => 0.5,
  33558528 => 0.5,
  274877911040 => 0.5,
  2251799813689344 => 0.5,
  274911461376 => 0.5,
  2251799847239680 => 0.5,
  2252074691592192 => 0.5,
  16779264 => 0.5,
  137438955520 => 0.5,
  1125899906844672 => 0.5,
  137455730688 => 0.5,
  1125899923619840 => 0.5,
  1126037345796096 => 0.5,
  8389632 => 0.5,
  68719477760 => 0.5,
  562949953422336 => 0.5,
  68727865344 => 0.5,
  562949961809920 => 0.5,
  563018672898048 => 0.5,
}
`;

exports[`HandRangeUtils.parse() parses "JTs" into a hand range 1`] = `
Map {
  1536 => 1,
  12582912 => 1,
  103079215104 => 1,
  844424930131968 => 1,
}
`;

exports[`HandRangeUtils.parse() parses "JTs:0.25" into a hand range 1`] = `
Map {
  1536 => 0.25,
  12582912 => 0.25,
  103079215104 => 0.25,
  844424930131968 => 0.25,
}
`;

exports[`HandRangeUtils.parse() parses "K8s+" into a hand range 1`] = `
Map {
  6144 => 1,
  50331648 => 1,
  412316860416 => 1,
  3377699720527872 => 1,
  5120 => 1,
  41943040 => 1,
  343597383680 => 1,
  2814749767106560 => 1,
  4608 => 1,
  37748736 => 1,
  309237645312 => 1,
  2533274790395904 => 1,
  4352 => 1,
  35651584 => 1,
  292057776128 => 1,
  2392537302040576 => 1,
  4224 => 1,
  34603008 => 1,
  283467841536 => 1,
  2322168557862912 => 1,
}
`;

exports[`HandRangeUtils.parse() parses "K8s+:0.80" into a hand range 1`] = `
Map {
  6144 => 0.8,
  50331648 => 0.8,
  412316860416 => 0.8,
  3377699720527872 => 0.8,
  5120 => 0.8,
  41943040 => 0.8,
  343597383680 => 0.8,
  2814749767106560 => 0.8,
  4608 => 0.8,
  37748736 => 0.8,
  309237645312 => 0.8,
  2533274790395904 => 0.8,
  4352 => 0.8,
  35651584 => 0.8,
  292057776128 => 0.8,
  2392537302040576 => 0.8,
  4224 => 0.8,
  34603008 => 0.8,
  283467841536 => 0.8,
  2322168557862912 => 0.8,
}
`;
